# arches-for-science

./: .eslintrc.js  .gitignore  .gitkeep  .stickler.yml  Dockerfile  MANIFEST.in  README.md  __init__.py  docker-compose.yml  manage.py  package.json  pyproject.toml
.github/workflows/: add-new-issue-to-project.yml  main.yml
CACHE/css/: arches.a78aeae18da1.css
afs/: Physical Thing.numbers  cypress.config.js  models.py  package.json  settings.py  settings_disco.py  tasks.py  tests.py  urls.py
afs/card_components/: iiif-card.json
afs/cypress/e2e/: spec.cy.js
afs/datatypes/: annotation.py  iiif.py
afs/etl_modules/: json_importer.py
afs/functions/: file_to_iiif.py  name_select_models.py
afs/install/: requirements.txt
afs/management/commands/: insert_prod_events.py  load_file_tiles.py  update_docs.py
afs/media/css/: package.css  project.css  report_templates.css
afs/migrations/: 0001_initial.py
afs/plugins/: chemical-analysis-workflow.json  collection-workflow.json  init-workflow.json  manifest-manager.json  physical-thing-workflow.json  project-report-workflow.json  project-workflow.json  research-activity-workflow.json  review-dataset-workflow.json  sample-workflow.json  sampling-activity-workflow.json  upload-dataset-workflow.json
afs/storages/: s3.py
afs/system_settings/: System_Settings.json
afs/templates/: base-manager.htm  index.htm  javascript.htm
afs/utils/: arches_template_engine.py  context_processors.py  docx_template_engine.py  pptx_template_engine.py  xlsx_template_engine.py
afs/views/: analysis_area_and_sample_taking.py  digital_resources_by_object_parts.py  download_files.py  download_project_files.py  instrument_info_step.py  manifest.py  manifest_manager.py  physical_thing_search.py  physical_things_in_set.py  renderer_config.py  report.py  s3.py  save_analysis_area.py  temp_file.py  update_resource_list.py
afs/webpack/: webpack-node-modules-aliases.js  webpack.common.js  webpack.config.prod.js
afs/widgets/: iiif.json
arches_for_science/: celery.py  models.py  settings.py  tasks.py  test_settings.py  tests.py  trigger_functions.py  urls.py  wsgi.py
arches_for_science/migrations/: 0001_initial.py  0002_view_plugin_permission.py  0003_manifest_x_canvas.py  0003_manifest_x_canvas_x_digitalresource.py  0003_update_workflow_plugins.py  0004_improve_primary_descriptor.py  0005_deploy_triggers_for_primary_descriptor.py  0006_remove_TopConcept.py  0006_update_primary_description_trigger_null_handling.py  0007_update_observation_types.py  0007_update_primary_description_trigger_handle_static_value.py  0008_remove_tilemodelproxy_calculate_multicard_primary_descriptor_single_and_more.py
arches_for_science/storages/: s3.py
arches_for_science/templates/: index.htm  javascript.htm
arches_for_science/utils/: context_processors.py  digital_resource_for_manifest.py
arches_for_science/views/: analysis_area_and_sample_taking.py  digital_resources_by_object_parts.py  download_project_files.py  instrument_info_step.py  manifest_x_canvas.py  renderer_config.py  s3.py  temp_file.py  update_resource_list.py
date_testing/: Robot.csv  Robot.json  Robot.mapping
docker/: afs-supervisor.conf  entrypoint.sh  env_file.env  settings_docker.py  settings_local.py
docker/cantaloupe/: Dockerfile  cantaloupe.properties
docker/conf.d/: afs-celerybeat.conf  afs-celeryd.conf
docker/webpack/: Dockerfile  entrypoint.sh  env_file.env
reports/: test.docx  test.pptx
(+667 files in other folders)
