[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "arches_for_science"
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
  "arches @ git+https://github.com/archesproject/arches.git@dev/7.5.x",
  "supervisor==4.2.1",
  "django-storages==1.13.2",
  "boto3==1.25.3",
  "arches-templating>=0.1.1",
]
version = "1.1.0a0"

[tool.setuptools]
packages = ["arches_for_science"]

[tool.black]
line-length = 140
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
