[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "arches-for-science"
readme = "README.md"
authors = [
    {name = "Farallon Geographics, Inc", email = "dev@fargeo.com"}
]
license = {text = "GNU AGPL3"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
requires-python = ">=3.9"
dependencies = [
  "arches>=7.5.0a1,<7.5.1",
  "supervisor==4.2.1",
  "django-storages==1.13.2",
  "boto3==1.25.3",
  "arches-templating>=0.1.2",
]
version = "1.1.0a1"

[tool.setuptools]
packages = ["arches_for_science"]

[tool.black]
line-length = 140
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
